--- a/manifest.json
+++ b/manifest.json
@@ -58,7 +58,10 @@
             "minified" : true,
 			"checkSiteMap":false
         },
-        "usingComponents" : true
+        "usingComponents" : true,
+		"requiredPrivateInfos":[
+			"chooseAddress"
+		]
     },
     "mp-alipay" : {
         "usingComponents" : true
